fixing responsive alignments

--- a/src/Components/Contact.css
+++ b/src/Components/Contact.css
@@ -55,7 +55,7 @@ a {
     margin-left: -220px;
   }
   .text {
-    padding: 16.6px;
+    padding: 16.8px;
     margin: 10px;
   }
 }
