--- a/src/Components/Form.css
+++ b/src/Components/Form.css
@@ -59,13 +59,15 @@ input::placeholder {
 
 @media (min-width: 990px) {
   .contactForm {
+    margin-top: 50px;
     display: inline;
     position: absolute;
+    background-color: #efeadf;
   }
 
   .messageHeading {
     margin-left: 0%;
-    margin-top: 50px;
+    background-color: #efeadf;
   }
 
   .name,
@@ -75,5 +77,6 @@ input::placeholder {
     margin-left: 0%;
     text-indent: 17%;
     width: 100%;
+    background-color: #efeadf;
   }
 }
