--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -26,6 +26,7 @@ h1 {
     position: fixed;
     width: 20%;
     background-color: transparent;
+    z-index: 10;
   }
 
   h1 {
